# fastapi_test.py

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  atlas.hcl  atlas_models.py  pyproject.toml
.github/workflows/: ruff.yaml
app/: main.py
app/test/: main.py
app/user_interface/fastapi/middleware/: __init__.py
cmd/app/: main.py
deploy/: Dockerfile
internal/: config.py
internal/pkg/event_loop/: __init__.py
internal/pkg/logger/: __init__.py  ctxlogger.py  formatter.py  logger.py
internal/user_interface/restapi/: __init__.py
internal/user_interface/restapi/controller/: healthz.py
internal/user_interface/restapi/middleware/: __init__.py  logger.py
src/: event_loop.py  logger.py
src/cmd/: server.py
src/infra/: db.py
src/infra/orm/: __init__.py  base.py
src/restapi/: __init__.py
src/restapi/controller/: __init__.py
src/restapi/middleware/: __init__.py  db.py  logger.py  request_id.py
