[tool.poetry]
authors = ["Hyeonki Hong <hhk7734@gmail.com>"]
description = ""
name = "fastapi-test"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
fastapi = "^0.104.1"
pydantic-settings = "^2.0.3"
loggingx-py = "^0.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
mypy = "^1.6.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
